...
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:contentScrim="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/image_header_image_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/add_meal_photo_description"
            android:scaleType="centerInside"
            app:layout_collapseMode="parallax"
            app:srcCompat="@drawable/ic_add_a_photo_24px" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/image_header_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.CollapsingToolbarLayout>

...
